[package]
name = "kvs"
version = "0.1.0"
author = ["Trdthg <trdthg@outlook.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# test = false

# [[bin]]
# test = false

[dependencies]
clap = "3.0.10"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"